# serphona

./: .gitignore  Makefile  README-en-US.md  README.md  docker-compose.dev.yml  package-lock.json  package.json
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci-infra.yml
backend/go/: .gitignore
backend/go/libs/platform-auth/: IMPLEMENTATION_GUIDE-en-US.md  IMPLEMENTATION_GUIDE-pt-BR.md  README-en-US.md  README-pt-BR.md  (+1 more)
backend/python/: .gitignore
backend/python/analytics-processor-service/: .env.example  .gitignore  Dockerfile  README-en-US.md  README-pt-BR.md  README.md  requirements.txt
backend/python/libs/analytics-common/: pyproject.toml
backend/python/libs/nlp-utils/: pyproject.toml
backend/python/reporting-export-service/: .env.example  requirements.txt
docs/api/: README.md
docs/architecture/: LIBS_VS_SERVICES-en-US.md  LIBS_VS_SERVICES.md  PROMPTS-YAML-SPEC.md  README-pt-BR.md  README.md  TENANT-MANAGER-TELEPHONY-EXTENSIONS.md  VOICE-GATEWAY-DESIGN.md
docs/decisions/: README.md
frontend/: README.md
frontend/website/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/website/src/: App.tsx  index.css
infra/: .gitignore  README.md
infra/ansible/playbooks/: kubernetes.yml
infra/helm/api-gateway/: Chart.yaml  values.yaml
prompts/: Prompt 2 – Modelagem de domínio, entidades e tabelas (PostgreSQL).txt  Prompt 5 – Wallet de créditos (top-up, consumo, concorrência).txt  Prompt 6 – Eventos, filas e propagação de roles.txt  Prompt 8 – Deploy (Docker + Kubernetes) e observabilidade.txt
(+165 files in other folders)
