[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-common"
version = "0.1.0"
description = "Shared analytics utilities for Serphona Python services"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-connect>=0.6.22",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
