[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nlp-utils"
version = "0.1.0"
description = "NLP utilities for sentiment analysis and topic extraction"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
